# pstn-seedhelper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  installer.iss
.github/workflows/: release.yml
src/: api.rs  app.rs  config.rs  game.rs  input.rs  main.rs  platform.rs  process.rs  seeder.rs  startup.rs  updater.rs
src/ui/: main.slint
