[package]
name = "pstn-seedhelper"
version = "4.2.1"
edition = "2021"

[[bin]]
name = "pstn-seedhelper"
path = "src/main.rs"

[dependencies]
slint           = "1"
tokio           = { version = "1", features = ["full"] }
tokio-util      = "0.7"
reqwest         = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
chrono          = { version = "0.4", features = ["clock"] }
chrono-tz       = "0.9"
sysinfo         = "0.31"
dirs            = "5"
anyhow          = "1"
rfd             = "0.14"
log             = "0.4"
env_logger      = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[build-dependencies]
slint-build  = "1"
winresource  = "0.1"

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
